# synapse

./: .env.bak  .gitignore  AGENTS.md  NOTICE  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: release-dryrun.yml  release.yml
apps/setup-center/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: TELEGRAM_IM_NOTES.md  multi-agent-architecture.md
docs-site/: index.md  package-lock.json  package.json  versions.md
docs-site/.vitepress/: config.ts
docs-site/advanced/: advanced.md  cli.md  wizard.md
examples/: .env.example
identity/: POLICIES.yaml
plugins/: README.md
scripts/: brand_plugins_tree.py  brand_synapse_tree.py  hitl-form-demo-schema.json  hitl-form-demo.html  merge_docs_site_upstream.py  merge_protected_src_after_sync.py  merge_setup_center_upstream.py  run_telegram_bot.py  run_tests.py  sync_upstream_sdk.py  sync_upstream_skills.py  sync_upstream_src.py  sync_upstream_tests.py
skills/: ATTRIBUTION.md
specs/: core-agent.md
synapse-plugin-sdk/: README.md  pyproject.toml
synapse-plugin-sdk/docs/: README.md  api-reference.md  cross-ecosystem.md  getting-started.md  hooks.md  permissions.md  plugin-json.md  protocols.md  testing.md
synapse-plugin-sdk/docs/examples/: channel-plugin.md  hook-plugin.md  llm-plugin.md  mcp-plugin.md  memory-plugin.md  rag-plugin.md  skill-plugin.md  tool-plugin.md  ui-plugin.md
synapse-plugin-sdk/src/synapse_plugin_sdk/: __init__.py  channel.py  decorators.py  llm.py  scaffold.py  types.py  version.py
tests/: conftest.py  test_cancel.py  test_module_deps.py
(+927 files in other folders)
