[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-plugin-sdk"
version = "0.7.0"
description = "SDK for building Synapse plugins — protocols, base classes, testing helpers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Synapse Team" }]
keywords = ["synapse", "plugin", "sdk", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/synapse/synapse"
Documentation = "https://docs.synapse.ai/plugins/"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_plugin_sdk"]
